[package]
name = "akademlia-rs"
version = "0.0.1"
edition = "2021"

[features]
default = ["async-std"]
async-std = ["rpcudp-rs/async-std", "dep:async-std"]
tokio = ["rpcudp-rs/tokio", "dep:tokio"]

[dependencies]
rand = "0.8.5"
log = "0.4"
rpcudp-rs = { git = "https://github.com/randombtree/rpcudp-rs.git" }
itertools = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
rmp = "^0.8"
rmp-serde = "1.1"
futures = "0.3"

async-std = { version = "1.12", optional = true }
tokio = { version = "1.34", optional = true, features = ["rt", "net", "time", "rt-multi-thread"] }

[dev-dependencies]
rand = { version = "0.8.5", features = [ "small_rng" ] }
env_logger = "0.8"
test-log = "0.2"
tempfile = "3"
